[gd_scene load_steps=27 format=2]

[ext_resource path="res://image/angler.png" type="Texture" id=1]
[ext_resource path="res://image/cloud1.png" type="Texture" id=2]
[ext_resource path="res://image/cloud0.png" type="Texture" id=3]
[ext_resource path="res://hsh/minigametscn/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://hsh/minigametscn/enemytimer.gd" type="Script" id=5]
[ext_resource path="res://hsh/minigametscn/Player.gd" type="Script" id=6]
[ext_resource path="res://image/coin.png" type="Texture" id=7]
[ext_resource path="res://image/bird0.png" type="Texture" id=8]
[ext_resource path="res://hsh/minigametscn/direction.tscn" type="PackedScene" id=9]
[ext_resource path="res://EX/shoot.wav" type="AudioStream" id=10]
[ext_resource path="res://hsh/minigametscn/Bullet.tscn" type="PackedScene" id=11]
[ext_resource path="res://EX/hit.wav" type="AudioStream" id=12]
[ext_resource path="res://hsh/minigametscn/bar.tscn" type="PackedScene" id=13]
[ext_resource path="res://hsh/minigametscn/MiniGame.gd" type="Script" id=14]
[ext_resource path="res://mak.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://image/title.png" type="Texture" id=16]
[ext_resource path="res://hsh/minigametscn/Button.gd" type="Script" id=17]
[ext_resource path="res://image/back.png" type="Texture" id=18]
[ext_resource path="res://image/btn.png" type="Texture" id=19]
[ext_resource path="res://EX/bar.wav" type="AudioStream" id=20]

[sub_resource type="TileSet" id=1]
0/name = "back.png 0"
0/texture = ExtResource( 18 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 200, 180 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 200, 180 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="DynamicFont" id=2]
size = 80
outline_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=5]
size = 100
font_data = ExtResource( 15 )

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1925.04, 88.4236, 0, 0, 0, 0, -2042.87, 95.9804, 0, 0, 0, 0, -2087, 123.746, 0, 0, 0, 0, 1825.35, 135.446 )
}

[node name="MiniGame" type="Node2D"]
script = ExtResource( 14 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 60, 60 )
format = 1
tile_data = PoolIntArray( -65518, 0, 0, 0, 0, 0, 3, 0, 0, 6, 0, 0, 8, 0, 0, 11, 0, 0, 14, 0, 0, 16, 0, 0, 65554, 0, 0, 196608, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196615, 0, 0, 196618, 0, 0, 196621, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 262144, 0, 0, 262148, 0, 0, 327692, 0, 0, 393219, 0, 0, 393222, 0, 0, 393223, 0, 0, 393225, 0, 0, 393227, 0, 0, 393231, 0, 0, 393234, 0, 0, 458752, 0, 0, 458762, 0, 0, 524293, 0, 0, 524301, 0, 0, 655359, 0, 0, 589825, 0, 0, 589828, 0, 0, 589832, 0, 0, 589840, 0, 0, 589842, 0, 0, 720895, 0, 0, 655371, 0, 0, 655372, 0, 0, 655378, 0, 0, 786431, 0, 0, 720898, 0, 0, 720901, 0, 0, 720904, 0, 0, 720907, 0, 0, 720909, 0, 0, 786448, 0, 0, 917503, 0, 0, 851972, 0, 0, 851978, 0, 0, 851986, 0, 0, 917504, 0, 0, 917507, 0, 0, 917508, 0, 0, 917511, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 983050, 0, 0, 983057, 0, 0, 983059, 0, 0, 1048589, 0, 0, 1114112, 0, 0, 1114115, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114122, 0, 0, 1114126, 0, 0, 1114129, 0, 0, 1179651, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179667, 0, 0, 1245187, 0, 0, 1245190, 0, 0, 1245196, 0, 0, 1310720, 0, 0, 1310729, 0, 0, 1310734, 0, 0, 1310737, 0, 0, 1310739, 0, 0, 1376260, 0, 0, 1376263, 0, 0, 1376268, 0, 0, 1376270, 0, 0, 1376275, 0, 0, 1441795, 0, 0, 1441796, 0, 0, 1441811, 0, 0, 1507328, 0, 0, 1507332, 0, 0, 1507335, 0, 0, 1507338, 0, 0, 1507340, 0, 0, 1507344, 0, 0, 1572868, 0, 0, 1572872, 0, 0, 1572879, 0, 0, 1572881, 0, 0, 1572883, 0, 0, 1638402, 0, 0, 1638403, 0, 0, 1638404, 0, 0, 1638412, 0, 0, 1638415, 0, 0, 1638416, 0, 0, 1638419, 0, 0, 1769471, 0, 0, 1703943, 0, 0, 1703945, 0, 0, 1703946, 0, 0, 1769472, 0, 0, 1769486, 0, 0, 1769487, 0, 0, 1769488, 0, 0, 1835008, 0, 0, 1835011, 0, 0, 1835012, 0, 0, 1835014, 0, 0, 1835019, 0, 0, 1835022, 0, 0, 1835027, 0, 0, 1900548, 0, 0, 1900553, 0, 0, 1900561, 0, 0, 1900563, 0, 0, 1966081, 0, 0, 1966087, 0, 0, 1966090, 0, 0, 2097151, 0, 0, 2031620, 0, 0, 2031626, 0, 0, 2031627, 0, 0, 2031630, 0, 0, 2031635, 0, 0, 2097152, 0, 0, 2097154, 0, 0, 2097159, 0, 0, 2097168, 0, 0, 2097171, 0, 0, 2162690, 0, 0, 2162692, 0, 0, 2162694, 0, 0, 2228234, 0, 0, 2228235, 0, 0, 2228237, 0, 0, 2228239, 0, 0, 2228242, 0, 0, 2359295, 0, 0, 2293761, 0, 0, 2293764, 0, 0, 2293765, 0, 0, 2293768, 0, 0, 2359300, 0, 0, 2359309, 0, 0, 2359312, 0, 0, 2359313, 0, 0, 2490366, 0, 0, 2424842, 0, 0, 2424843, 0, 0, 2424844, 0, 0, 2424848, 0, 0, 2424850, 0, 0, 2490369, 0, 0, 2490372, 0, 0, 2490373, 0, 0, 2490374, 0, 0, 2490375, 0, 0, 2621439, 0, 0, 2555915, 0, 0, 2555919, 0, 0, 2555920, 0, 0, 2621442, 0, 0, 2621445, 0, 0, 2621453, 0, 0, 2621458, 0, 0, 2686976, 0, 0, 2686978, 0, 0, 2686981, 0, 0, 2686982, 0, 0, 2686983, 0, 0, 2686987, 0, 0, 2752517, 0, 0, 2752529, 0, 0 )

[node name="angler" type="Sprite" parent="TileMap"]
position = Vector2( 609.989, 1984.24 )
texture = ExtResource( 1 )

[node name="cloud8" type="Sprite" parent="TileMap"]
position = Vector2( 793.076, 979.759 )
scale = Vector2( 0.260196, 0.260196 )
texture = ExtResource( 2 )

[node name="cloud0" type="Sprite" parent="TileMap"]
position = Vector2( 170.68, 542.152 )
scale = Vector2( 0.103183, 0.103971 )
texture = ExtResource( 2 )

[node name="cloud7" type="Sprite" parent="TileMap"]
position = Vector2( 293.248, 1246.41 )
scale = Vector2( 0.260196, 0.260196 )
texture = ExtResource( 2 )

[node name="cloud1" type="Sprite" parent="TileMap"]
position = Vector2( 395.24, 631.983 )
scale = Vector2( 0.132643, 0.132643 )
texture = ExtResource( 3 )

[node name="cloud2" type="Sprite" parent="TileMap"]
position = Vector2( 196.118, 897.376 )
scale = Vector2( 0.260196, 0.260196 )
texture = ExtResource( 3 )

[node name="cloud3" type="Sprite" parent="TileMap"]
position = Vector2( 897.056, 1363.8 )
scale = Vector2( 0.132643, 0.132643 )
texture = ExtResource( 3 )

[node name="cloud4" type="Sprite" parent="TileMap"]
position = Vector2( 602.137, 1056.55 )
scale = Vector2( 0.125655, 0.126615 )
texture = ExtResource( 2 )

[node name="cloud5" type="Sprite" parent="TileMap"]
position = Vector2( 688.853, 702.62 )
scale = Vector2( 0.136319, 0.136319 )
texture = ExtResource( 2 )

[node name="cloud6" type="Sprite" parent="TileMap"]
position = Vector2( 903.262, 936.317 )
scale = Vector2( 0.22193, 0.22193 )
texture = ExtResource( 3 )

[node name="coin" type="Sprite" parent="TileMap"]
position = Vector2( 153, 312 )
scale = Vector2( 1.10656, 1.10656 )
texture = ExtResource( 7 )

[node name="point" type="Sprite" parent="TileMap"]
position = Vector2( 789.064, 312 )
scale = Vector2( 0.664575, 0.664575 )
texture = ExtResource( 8 )

[node name="title" type="Sprite" parent="TileMap"]
position = Vector2( 595.911, 145 )
scale = Vector2( 0.349352, 0.349352 )
texture = ExtResource( 16 )

[node name="UI" type="Node2D" parent="."]
position = Vector2( 1.05951, -1.05948 )

[node name="coinLabel" type="Label" parent="UI"]
margin_left = 238.187
margin_top = 269.679
margin_right = 510.187
margin_bottom = 384.679
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Coin : 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pointLabel" type="Label" parent="UI"]
margin_left = 873.566
margin_top = 266.295
margin_right = 1171.57
margin_bottom = 381.295
custom_colors/font_color = Color( 0.0470588, 0.0431373, 0.0431373, 1 )
custom_fonts/font = SubResource( 3 )
text = "Point : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="UI"]
margin_left = 836.0
margin_top = 2327.0
margin_right = 1149.0
margin_bottom = 2461.0
texture_normal = ExtResource( 19 )
expand = true
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="Label" parent="UI/Button"]
margin_left = 56.5389
margin_top = 21.818
margin_right = 234.539
margin_bottom = 136.818
rect_rotation = -6.01275
custom_colors/font_color = Color( 0.286275, 0.286275, 0.286275, 1 )
custom_fonts/font = SubResource( 4 )
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lackcoin" type="Label" parent="UI"]
margin_left = 370.549
margin_top = 1423.31
margin_right = 840.549
margin_bottom = 1535.31
custom_colors/font_color = Color( 0.996078, 0.00784314, 0.00784314, 1 )
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 625.035, 2323.38 )
collision_layer = 2
collision_mask = 8
script = ExtResource( 6 )
Bullet = ExtResource( 11 )

[node name="hit" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2( -541.32, -546.827 )
stream = ExtResource( 12 )

[node name="shoot" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2( 2.66968, -32.0361 )
stream = ExtResource( 10 )

[node name="Bullet" parent="." instance=ExtResource( 11 )]
position = Vector2( 1762.25, 656.698 )

[node name="birdpath" type="Path2D" parent="."]
position = Vector2( 615.874, -1515.81 )
scale = Vector2( 0.288131, 24.2681 )
curve = SubResource( 6 )

[node name="birdfollowpath" type="PathFollow2D" parent="birdpath"]
position = Vector2( 419.245, 131.241 )
rotation = 0.00299104
offset = 6450.0

[node name="enemytimer" type="Timer" parent="."]
autostart = true
script = ExtResource( 5 )

[node name="bar" parent="." instance=ExtResource( 13 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 308.0
margin_top = 2078.0
margin_right = 348.0
margin_bottom = 2462.0
min_value = 0.0
max_value = 0.0
value = 0.0

[node name="direction" parent="." instance=ExtResource( 9 )]
position = Vector2( 434.949, 2034.75 )

[node name="barsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 20 )

[connection signal="pressed" from="UI/Button" to="UI/Button" method="_on_Button_pressed"]
[connection signal="timeout" from="enemytimer" to="." method="_on_enemytimer_timeout"]
